[metadata]
name = BasicLineAlg
description = A collection of numerical methods for Python with Visualizations
author = Fernando Bellido Pazos
author_email = fbellidopazos@gmail.com
license = MIT
license_file = Python/License
platform = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    BasicLineAlg
install_requires =
    numpy
    bqplot
    ipywidgets
    matplotlib
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    tox

[flake8]
max-line-length = 160