[project]
name = "BNumMet"
version = "1.0.0"
authors = [
  { name="Fernando Bellido Pazos", email="fbellidopazos@gmail.com" },
]
description = "Fundamental numerical methods simplified for easy student comprehension with a Jupyter-based GUI."
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = ""
bugtracker = ""

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=BNumMet"
testpaths = [
    "tests",
]