[metadata]
name = BNumMet
description = Basic Numerical Methods for Python 3
author = Fernando Bellido Pazos
author_email = fbellidopazos@gmail.com
url = https://github.com/fbpazos/Trabajo-Fin-Master
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    BNumMet
    BNumMet.Visualizers
install_requires =
    numpy
    bqplot
    jupyter
    ipywidgets==8.0.4
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox
    black
    jupyter-black
